# remoteme

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pylama.ini  pyproject.toml  pytest.ini  requirements.txt
.ci/: remoteme-entrypoint.sh
assets/css/: dark.css  light.css  style.css
assets/img/: browserconfig.xml  site.webmanifest
config/nginx/: remoteme.conf
jobs/: admin.py  collections.py  filters.py  forms.py  managers.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
jobs/fixtures/: init_scope.json
jobs/migrations/: 0001_initial.py  0002_activate_pg_extension.py  0002_advert_is_moderate.py  0002_advert_stack.py  0003_auto_20201019_2156.py  0003_auto_20210319_1801.py  0004_auto_20201019_2214.py  0005_enlarge_country_max_length.py  0006_added_null_true_to_fields.py  0007_added_currency_field.py  0008_added_new_field_for_advert.py
jobs/templatetags/: currency.py
jobs/tests/: test_views.py
remoteme/: asgi.py  celery_remoteme.py  settings.py  sitemaps.py  urls.py  wsgi.py
settings/: admin.py  models.py
settings/migrations/: 0001_initial.py  0002_auto_20201004_2328.py
templates/: base.html
templates/blocks/: footer.html  navbar.html  paginator.html
templates/robots/: demo.robots.txt  robots.txt
tests/jobs/: factories.py  test_views.py
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py
utils/: admin.py  filters.py  forms.py  handlers.py  mixins.py  models.py  pagination.py  paginator.py  services.py  utils.py
utils/dtos/: hh.py
(+5 files in other folders)
